ホームページ最初の部分

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
+<!-- ホームページの最初の部分 -->
 <!DOCTYPE html>
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width, initial-scal1.0">
-        <title>テスト</title>
+        <title>トップページ</title>
     </head>
     <body>
-        <h1>Hello,World</h1>
-        <h2>連動テスト</h2>
+        <h1>僕の勉強ホームページ</h1>
+        <h1>基本情報技術者試験</h1>
+        <h2>テクノロジ系</h2>
+        <a href="">第１章 基礎理論<br></a>
+        <a href="">第２章 コンピュータシステム<br></a>
+        <a href="">第３章 技術要素<br></a>
+        <a href="">第４章 開発技術<br></a>
+        <h2>マネジメント系</h2>
+        <a href="">第５章 プロジェクトマネジメント<br></a>
+        <a href="">第６章 サービスマネジメント<br></a>
+        <h2>ストラテジ系</h2>
+        <a href="">第７章 システム戦略<br></a>
+        <a href="">第８章 経営戦略<br></a>
+        <a href="">第９章 企業と法務<br></a>
+        <h1>応用情報技術者試験</h1>
     </body>
 </html>
