--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>僕の勉強ホームページ</h1>
         <h1>基本情報技術者試験</h1>
         <h2>テクノロジ系</h2>
-        <a href="https://mito97779.github.io/mystudy/基本情報/1-1.html">第１章 基礎理論<br></a>
+        <a href="https://mito97779.github.io/mystudy/基本情報/Foundation/1.html">第１章 基礎理論<br></a>
         <a href="">第２章 コンピュータシステム<br></a>
         <a href="">第３章 技術要素<br></a>
         <a href="">第４章 開発技術<br></a>
