--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <h1>基本情報技術者試験</h1>
         <h2>テクノロジ系</h2>
         <a href="https://mito97779.github.io/mystudy/基本情報/Foundation/1.html">第１章 基礎理論<br></a>
-        <a href="">第２章 コンピュータシステム<br></a>
-        <a href="">第３章 技術要素<br></a>
-        <a href="">第４章 開発技術<br></a>
+        <a href="https://mito97779.github.io/mystudy/基本情報/PCsystem/2.html">第２章 コンピュータシステム<br></a>
+        <a href="https://mito97779.github.io/mystudy/基本情報/Tecnical_ele/3.html">第３章 技術要素<br></a>
+        <a href="https://mito97779.github.io/mystudy/基本情報/Development/4.html">第４章 開発技術<br></a>
         <h2>マネジメント系</h2>
-        <a href="">第５章 プロジェクトマネジメント<br></a>
-        <a href="">第６章 サービスマネジメント<br></a>
+        <a href="https://mito97779.github.io/mystudy/基本情報/PM/5.html">第５章 プロジェクトマネジメント<br></a>
+        <a href="https://mito97779.github.io/mystudy/基本情報/SM/6.html">第６章 サービスマネジメント<br></a>
         <h2>ストラテジ系</h2>
-        <a href="">第７章 システム戦略<br></a>
-        <a href="">第８章 経営戦略<br></a>
-        <a href="">第９章 企業と法務<br></a>
+        <a href="https://mito97779.github.io/mystudy/基本情報/System_str/7.html">第７章 システム戦略<br></a>
+        <a href="https://mito97779.github.io/mystudy/基本情報/Management_str/8.html">第８章 経営戦略<br></a>
+        <a href="https://mito97779.github.io/mystudy/基本情報/C_and_L/9.html">第９章 企業と法務<br></a>
         <h1>応用情報技術者試験</h1>
     </body>
 </html>
