--- a/index.html
+++ b/index.html
@@ -4,23 +4,43 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width, initial-scal1.0">
+        <style>
+            @import url(style.css);
+        </style>
         <title>トップページ</title>
     </head>
     <body>
-        <h1>僕の勉強ホームページ</h1>
-        <h1>基本情報技術者試験</h1>
-        <h2>テクノロジ系</h2>
-        <a href="./基本情報/Foundation/1.html">第１章 基礎理論<br></a>
-        <a href="https://mito97779.github.io/mystudy/基本情報/PCsystem/2.html">第２章 コンピュータシステム<br></a>
-        <a href="https://mito97779.github.io/mystudy/基本情報/Tecnical_ele/3.html">第３章 技術要素<br></a>
-        <a href="https://mito97779.github.io/mystudy/基本情報/Development/4.html">第４章 開発技術<br></a>
-        <h2>マネジメント系</h2>
-        <a href="https://mito97779.github.io/mystudy/基本情報/PM/5.html">第５章 プロジェクトマネジメント<br></a>
-        <a href="https://mito97779.github.io/mystudy/基本情報/SM/6.html">第６章 サービスマネジメント<br></a>
-        <h2>ストラテジ系</h2>
-        <a href="https://mito97779.github.io/mystudy/基本情報/System_str/7.html">第７章 システム戦略<br></a>
-        <a href="https://mito97779.github.io/mystudy/基本情報/Management_str/8.html">第８章 経営戦略<br></a>
-        <a href="https://mito97779.github.io/mystudy/基本情報/C_and_L/9.html">第９章 企業と法務<br></a>
-        <h1>応用情報技術者試験</h1>
+        <header>
+             <h1>僕の勉強ホームページ</h1>
+             <nav>
+                グローバルナビゲーション
+            </nav>
+        </header>
+
+        <main>
+            <article>
+                <h1>基本情報技術者試験</h1>
+                <h2 class="css1">テクノロジ系</h2>
+                <a href="./基本情報/Foundation/1.html">第１章 基礎理論<br></a>
+                <a href="./基本情報/PCsystem/2.html">第２章 コンピュータシステム<br></a>
+                <a href="./基本情報/Tecnical_ele/3.html">第３章 技術要素<br></a>
+                <a href="./基本情報/Development/4.html">第４章 開発技術<br></a>
+                <h2>マネジメント系</h2>
+                <a href="./基本情報/PM/5.html">第５章 プロジェクトマネジメント<br></a>
+                <a href="./基本情報/SM/6.html">第６章 サービスマネジメント<br></a>
+                <h2>ストラテジ系</h2>
+                <a href="./基本情報/System_str/7.html">第７章 システム戦略<br></a>
+                <a href="./基本情報/Management_str/8.html">第８章 経営戦略<br></a>
+                <a href="./基本情報/C_and_L/9.html">第９章 企業と法務<br></a>
+            </article>
+
+            <article>
+                <h1>応用情報技術者試験</h1>
+            </article>
+
+        </main>
+        <footer>
+            フッター
+        </footer>
     </body>
 </html>
