--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width, initial-scal1.0">
-        <style>
-            @import url(style.css);
-        </style>
+        <link rel="stylesheet" href="./style.css">
         <title>トップページ</title>
     </head>
     <body>
